Add CS Yaz0 wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,21 @@
 cmake_minimum_required(VERSION 3.10)
 project(Cead VERSION 0.1.0)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 include(CTest)
 enable_testing()
 
+add_definitions(-DSHARED_DLL)
 add_library(Cead SHARED
-    ./src/Cead.cpp
+    ./src/include/cs_yaz0.h
+    ./src/cs_yaz0.cpp
 )
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/lib/oead)
-target_include_directories(Cead PUBLIC ${PROJECT_SOURCE_DIR}/lib/oead/src/include)
 target_link_libraries(Cead PRIVATE oead)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
