--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/oead"]
-	path = lib/oead
+[submodule "native/lib/oead"]
+	path = native/lib/oead
 	url = https://github.com/zeldamods/oead.git
