--- a/src/Cead.csproj
+++ b/src/Cead.csproj
@@ -1,9 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Lib\Cead.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+	  <EmbeddedResource Include="..\native\build\Cead.dll" Link="Lib\Cead" />
+  </ItemGroup>
 
 </Project>
