Impl interop functions for oead::Byml (static)

--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -14,6 +14,9 @@ enable_testing()
 add_library(Cead SHARED
     ./src/include/cs_yaz0.h
     ./src/cs_yaz0.cpp
+
+    ./src/include/cs_byml.h
+    ./src/cs_byml.cpp
 )
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/lib/oead)
