--- a/src/Cead.csproj
+++ b/src/Cead.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	  <EmbeddedResource Include="..\native\build\Cead.dll" Link="Lib\Cead" />
+	  <EmbeddedResource Include="..\native\build\Cead.dll" Link="Lib\Cead.lib" />
   </ItemGroup>
 
 </Project>
