Isolate handles (freeX) functions

--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -12,9 +12,11 @@ include(CTest)
 enable_testing()
 
 add_library(Cead SHARED
+    ./src/include/handles.h
+
     ./src/include/cs_yaz0.h
     ./src/cs_yaz0.cpp
-
+    
     ./src/include/cs_byml.h
     ./src/cs_byml.cpp
 )
