--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/c++,cmake,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,cmake,visualstudio
 
+.vscode/
+
 [Bb]uild/
 
 ### C++ ###
