--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         config:
           - name: Linux
             os: ubuntu-latest
-            ext: .so
+            ext: ""
             runtime: linux-x64
             build: linux
             vars: CXX="g++"
