--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -17,8 +17,8 @@ enable_testing()
 add_library(Cead SHARED
     ./src/include/cead.h
 
-    ./src/include/handles.h
-    ./src/handles.cpp
+    ./src/include/data_handle.h
+    ./src/data_handle.cpp
 
     ./src/include/cs_yaz0.h
     ./src/cs_yaz0.cpp
