--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         config:
           - name: Linux
             os: ubuntu-latest
-            ext: ""
+            ext: .so
             runtime: linux-x64
             build: linux
             vars: CXX="g++"
@@ -113,4 +113,4 @@ jobs:
         with:
           name: ${{ env.proj }}${{ matrix.platform.ext }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          path: ${{ matrix.platform.name }}/${{ env.proj }}${{ matrix.platform.ext }}
+          path: ${{ matrix.platform.name }}/${{ env.proj }}.dll
