--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,7 +14,7 @@ jobs:
         config:
           - name: Linux
             os: ubuntu-latest
-            ext: ""
+            ext: .so
             runtime: linux-x64
             build: linux
             vars: CXX="g++"
@@ -80,4 +80,4 @@ jobs:
         name: Upload artifacts
         with:
           name: ${{ env.proj }}${{ matrix.config.ext }}
-          path: ${{ matrix.config.name }}/${{ env.proj }}${{ matrix.config.ext }}
+          path: ${{ matrix.config.name }}/${{ env.proj }}.dll
